Fix books with extra-bold text on firefox

--- a/styles/book.css
+++ b/styles/book.css
@@ -14,7 +14,8 @@
 }
 a.book {
   color: inherit;
-  text-decoration: none;
+  font-weight: inherit;
+  text-decoration: inherit;
 }
 
 .book.new::before {
